force-app/main/default/objects/Error_Log__e/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <description>Id of current user</description>
    <label>Current User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>