force-app/main/default/objects/Error_Log__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Error type accepted values are Apex,Workflow,Process Builder,Flows,LC</description>
    <label>Error Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>