force-app/main/default/objects/Error_Log__e/fields/Inaccessible_Fields_Details__c.field-meta.xml
<CustomField>
    <fullName>Inaccessible_Fields_Details__c</fullName>
    <description>Capture details for Query Exception</description>
    <inlineHelpText>Capture details for Query Exception</inlineHelpText>
    <label>Inaccessible Fields Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>