force-app/main/default/objects/Error_Log__e/fields/Limits_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Limits_Snapshot__c</fullName>
    <description>This field capture the  limit snapshot which represents the Apex profiling</description>
    <inlineHelpText>This field capture the  limit snapshot which represents the Apex profiling</inlineHelpText>
    <label>Limits Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>