force-app/main/default/objects/Error_Log__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>