force-app/main/default/objects/Error_Log__e/fields/Row_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Row_Exception_Message__c</fullName>
    <label>Row Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>